# KeplerMind

./: .env  .gitignore  AGENTS.md  Makefile  README.md  TODO.MD  TODO.md  pyproject.toml  requirements.txt
keplermind/: __init__.py  __main__.py  cli.py  config.py  graph.py  state.py
keplermind/agents/: __init__.py  ask_and_score.py  base.py  build_rag.py  critic.py  explain.py  intake.py  memorize.py  planner.py  profile.py  reflect_and_repair.py  report.py  research.py  schedule.py
keplermind/app/: graph.py  main.py  state.py
keplermind/app/config/: settings.py
keplermind/app/mcp/: controller.py  policies.py  priors.py  stores.py
keplermind/app/memory/: preferences.json
keplermind/app/nodes/: __init__.py  ask_and_score.py  build_rag.py  explain.py  intake.py  memorize.py  planner.py  profile.py  reflect_and_repair.py  report.py  research.py  schedule.py
keplermind/app/prompts/: cite_merge.md  explain_deep.md  explain_light.md  hallucination_guard.md  planner.md  question_gen.md  reflection_critic.md  scoring_critic.md
keplermind/app/tools/: __init__.py  artifacts.py  chunk.py  citations.py  embed.py  scrape.py  search.py
keplermind/data/: knowledge_base.json  vector_store.json
keplermind/tests/: test_explain.py  test_mcp_commit.py  test_mcp_policies.py  test_planner_priors.py  test_rag_and_citations.py  test_reflection_loop.py  test_report.py
keplermind/tools/: __init__.py  evaluation.py  llm.py  search.py  vectorstore.py
rich/: __init__.py  console.py
