[tool.poetry]
name = "keplermind"
version = "0.1.0"
description = "Agentic learning and reasoning system built around the MCP paradigm"
authors = ["KeplerMind Team"]
readme = "README.md"
packages = [{ include = "keplermind" }]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.0"
openai = "^1.30.0"

[tool.poetry.scripts]
keplermind = "keplermind.cli:main"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
